--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debounce": "^1.2.0",
     "duplex-emitter": "^2.1.2",
     "ink": "^2.7.0",
+    "node-notifier": "^6.0.0",
     "react": "^16.12.0",
     "reconnect": "^2.0.2",
     "uuid": "^3.4.0"
