--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve": "node app -s",
     "connect": "node app -c",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "babel ./ink-app/src --out-dir ./ink-app/dist",
+    "watch": "babel ./ink-app/src --watch --out-dir ./ink-app/dist"
   },
   "bin": {
     "snacc": "app.js"
@@ -14,23 +15,45 @@
   "author": "zentus",
   "license": "MIT",
   "dependencies": {
-    "chalk": "^3.0.0",
-    "debounce": "^1.2.0",
-    "duplex-emitter": "^2.1.2",
-    "express": "^4.17.1",
-    "ink": "^2.7.0",
+    "chalk": "3.0.0",
+    "debounce": "1.2.0",
+    "duplex-emitter": "2.1.2",
+    "express": "4.17.1",
+    "ink": "2.7.0",
     "maskin": "0.0.2",
-    "node-notifier": "^6.0.0",
-    "react": "^16.12.0",
-    "reconnect": "^2.0.2",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "uuid": "^3.4.0",
-    "ws": "^7.2.1",
-    "zingo": "0.0.2"
+    "node-notifier": "6.0.0",
+    "react": "16.12.0",
+    "reconnect": "2.0.2",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
+    "uuid": "3.4.0",
+    "ws": "7.2.1",
+    "zingo": "0.0.2",
+    "@babel/cli": "7.8.4",
+    "@babel/core": "7.8.4",
+    "@babel/polyfill": "7.8.3",
+    "@babel/preset-env": "7.8.4",
+    "@babel/preset-react": "7.8.3",
+    "final-form": "4.18.7",
+    "ink-text-input": "3.2.2",
+    "react-final-form": "6.3.5",
+    "window-size": "1.1.1"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": true
+          }
+        }
+      ]
+    ]
   },
   "optionalDependencies": {
-    "bufferutil": "^4.0.1",
-    "utf-8-validate": "^5.0.2"
+    "bufferutil": "4.0.1",
+    "utf-8-validate": "5.0.2"
   }
 }
