--- a/package.json
+++ b/package.json
@@ -15,29 +15,30 @@
   "author": "zentus",
   "license": "MIT",
   "dependencies": {
-    "chalk": "3.0.0",
-    "debounce": "1.2.0",
-    "duplex-emitter": "2.1.2",
-    "express": "4.17.1",
-    "ink": "2.7.0",
-    "maskin": "0.0.2",
-    "node-notifier": "6.0.0",
-    "react": "16.12.0",
-    "reconnect": "2.0.2",
-    "socket.io": "2.3.0",
-    "socket.io-client": "2.3.0",
-    "uuid": "3.4.0",
-    "ws": "7.2.1",
-    "zingo": "0.0.2",
     "@babel/cli": "7.8.4",
     "@babel/core": "7.8.4",
     "@babel/polyfill": "7.8.3",
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
+    "axios": "^0.19.2",
+    "chalk": "3.0.0",
+    "debounce": "1.2.0",
+    "duplex-emitter": "2.1.2",
+    "express": "4.17.1",
     "final-form": "4.18.7",
+    "ink": "2.7.0",
     "ink-text-input": "3.2.2",
+    "maskin": "0.0.2",
+    "node-notifier": "6.0.0",
+    "react": "16.12.0",
     "react-final-form": "6.3.5",
-    "window-size": "1.1.1"
+    "reconnect": "2.0.2",
+    "socket.io": "2.3.0",
+    "socket.io-client": "2.3.0",
+    "uuid": "3.4.0",
+    "window-size": "1.1.1",
+    "ws": "7.2.1",
+    "zingo": "0.0.2"
   },
   "babel": {
     "presets": [
