--- a/package.json
+++ b/package.json
@@ -2,15 +2,22 @@
   "name": "snacc",
   "version": "0.0.6",
   "description": "A minimal command line Websocket chat server/client",
-  "main": "app.js",
+  "main": "source/app.js",
   "scripts": {
-    "serve": "node app -s",
-    "connect": "node app -c",
-    "build": "babel ./ink-app/src --out-dir ./ink-app/dist",
-    "watch": "babel ./ink-app/src --watch --out-dir ./ink-app/dist"
+    "serve": "node source/app -s",
+    "connect": "node source/app -c",
+    "build": "babel ./source/ink-app --out-dir ./dist",
+    "watch": "babel ./source/ink-app --watch --out-dir ./dist",
+    "lint": "eslint source",
+    "lint:fix": "./lint-fix.sh",
+    "test": "npm run lint",
+		"prepare": "npm run build"
   },
+	"files": [
+		"source"
+	],
   "bin": {
-    "snacc": "app.js"
+    "snacc": "source/app.js"
   },
   "author": "zentus",
   "license": "MIT",
@@ -40,6 +47,19 @@
     "ws": "7.2.1",
     "zingo": "0.0.2"
   },
+  "optionalDependencies": {
+    "bufferutil": "4.0.1",
+    "utf-8-validate": "5.0.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-standard": "^4.0.1"
+  },
   "babel": {
     "presets": [
       "@babel/preset-react",
@@ -52,9 +72,5 @@
         }
       ]
     ]
-  },
-  "optionalDependencies": {
-    "bufferutil": "4.0.1",
-    "utf-8-validate": "5.0.2"
   }
 }
