--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build": "babel ./source/ink-app --out-dir ./dist",
     "watch": "babel ./source/ink-app --watch --out-dir ./dist",
     "lint": "eslint source",
-    "lint:fix": "./lint-fix.sh",
+    "lint:fix": "./scripts/lint-fix.sh",
+		"release:patch": "./scripts/release.sh patch",
+		"release:minor": "./scripts/release.sh minor",
+		"release:major": "./scripts/release.sh major",
     "test": "npm run lint",
     "prepare": "npm run build"
   },
