--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "serve": "node source/app -s",
     "connect": "node source/app -c",
+		"dev:serve": "node source/app -s --use-self-signed-cert",
+    "dev:connect": "node source/app -c --allow-self-signed-cert",
+		"dev:generate:cert": "./scripts/generate-dev-keys.sh",
     "build": "babel ./source/ink-app --out-dir ./dist",
     "watch": "babel ./source/ink-app --watch --out-dir ./dist",
     "lint": "eslint source",
