build: Only build ink-app once in release script

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "release:patch": "./scripts/release.sh patch",
     "release:minor": "./scripts/release.sh minor",
     "release:major": "./scripts/release.sh major",
-    "test": "npm run lint",
-    "prepare": "npm run build"
+    "test": "npm run lint"
   },
   "files": [
     "source/app.js",
