--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "snacc",
   "version": "0.0.13",
   "description": "A minimal command line Websocket chat server/client",
-  "main": "source/app.js",
+  "main": "dist/app.js",
   "scripts": {
-    "app": "node source/app",
-    "serve": "node source/app -s",
-    "connect": "node source/app -c",
-    "dev:serve": "node source/app -s --use-self-signed-cert",
-    "dev:connect": "node source/app -c --allow-self-signed-cert",
-    "dev:serve:connect": "node source/app -s -c --use-self-signed-cert --allow-self-signed-cert",
+    "app": "node dist/app.js",
+    "serve": "node dist/app.js -s",
+    "connect": "node dist/app.js -c",
+    "dev:serve": "node dist/app.js -s --use-self-signed-cert",
+    "dev:connect": "node dist/app.js -c --allow-self-signed-cert",
+    "dev:serve:connect": "node dist/app.js -s -c --use-self-signed-cert --allow-self-signed-cert",
     "dev:generate:cert": "./scripts/generate-dev-keys.sh",
-    "build": "babel ./source/ink-app --out-dir ./dist",
-    "watch": "babel ./source/ink-app --watch --out-dir ./dist",
+    "build": "babel ./source --out-dir ./dist",
+    "watch": "babel ./source --watch --out-dir ./dist",
     "lint": "eslint source",
     "lint:fix": "./scripts/lint-fix.sh",
     "release:patch": "./scripts/release.sh patch",
@@ -21,11 +21,10 @@
     "test": "npm run lint"
   },
   "files": [
-    "source/app.js",
     "dist"
   ],
   "bin": {
-    "snacc": "source/app.js"
+    "snacc": "dist/app.js"
   },
   "author": "zentus",
   "license": "MIT",
@@ -35,7 +34,8 @@
     "@babel/polyfill": "7.8.3",
     "@babel/preset-env": "7.8.4",
     "@babel/preset-react": "7.8.3",
-    "axios": "^0.19.2",
+    "@babel/runtime": "7.8.7",
+    "axios": "0.19.2",
     "chalk": "3.0.0",
     "debounce": "1.2.0",
     "duplex-emitter": "2.1.2",
@@ -60,6 +60,7 @@
     "utf-8-validate": "5.0.2"
   },
   "devDependencies": {
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
@@ -67,18 +68,5 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-standard": "^4.0.1"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-react",
-      [
-        "@babel/preset-env",
-        {
-          "targets": {
-            "node": true
-          }
-        }
-      ]
-    ]
   }
 }
